--- a/css/layouts/marketing.css
+++ b/css/layouts/marketing.css
@@ -569,7 +569,7 @@ div#figure ul li span {
     padding-bottom: 80px;
 }
 .splash-container {
-    background-image: url("img/floral4.jpg");
+    background-image: url("imagem/floral4.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
